fix(style): wrap long text in tables cells (#1920)

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -144,6 +144,9 @@ a[ng-click]{
   white-space: nowrap;
 }
 
+.widget .widget-body table tbody td p{
+  white-space: normal;
+}
 .template-widget {
   height: 100%;
 }
